--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "impact-market-translations",
+  "name": "@impact-market/translations",
   "version": "1.0.0",
   "description": "impactMarket applications translation files",
   "keywords": ["Impact Market", "impactMarket", "UBI"],
-  "author": "impactMarket"
+  "author": "impact-market"
 }
